# bitread

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release.toml
bitread_lib/: Cargo.toml
bitread_lib/src/: lib.rs
bitread_macro/: Cargo.toml
bitread_macro/src/: lib.rs
src/: bitread.rs  lib.rs  prelude.rs
