[package]
name = "bitread"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "bitread_lib",
    "bitread_macro",
]

[dependencies]
bitread_lib = { path = "bitread_lib", version = "0.1.0" }
bitread_macro = { path = "bitread_macro", version = "0.1.0" }
bitvec = "1.0.1"