[package]
name = "bitread"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "The bitread library in Rust is designed to efficiently convert small binary data into Rust structs"
documentation = "https://docs.rs/bitread"
repository = "https://github.com/tpisto/bitread"

[workspace]
members = [
    "bitread_macro",
]

[dependencies]
bitread_macro = { path = "bitread_macro", version = "0.1.3" }
bitvec = "1.0.1"
