[package]
name = "bitread_macro"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "The bitread library macros"
documentation = "https://docs.rs/bitread"
repository = "https://github.com/tpisto/bitread"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
tracing = "0.1.40"
